# for i in $(ls *.c | sort); do echo "'$i',"; done
server_rpc_src = files([
	'esdm_rpc_get_random_bytes_full_s.c',
	'esdm_rpc_get_random_bytes_min_s.c',
	'esdm_rpc_get_random_bytes_s.c',
	'esdm_rpc_privileges.c',
	'esdm_rpc_rnd_add_entropy_s.c',
	'esdm_rpc_rnd_add_to_ent_cnt_s.c',
	'esdm_rpc_rnd_clear_pool_s.c',
	'esdm_rpc_rnd_get_ent_cnt_s.c',
	'esdm_rpc_rnd_reseed_crng_s.c',
	'esdm_rpc_server.c',
	'esdm_rpc_service.c',
	'esdm_rpc_status_s.c',
	'esdm_rpc_write_data_s.c',
	'privileges.c'
])
